# ruggylab-os

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCTION_SECRETS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruggylab_schema.sql
.github/: dependabot.yml
alembic/: README  env.py
app/: analyzer_gateway.py  main.py  scheduler.py
deploy/: Caddyfile
docs/: ARCHITECTURE_AS_BUILT.md  ARCHITECTURE_REVIEW.md  AUDIT_FINAL_SECURITE_CLINIQUE_2026.md  AUDIT_RISK_REGISTER_2026.md  AUTOVALIDATION_5_8.md  CLINICAL_RESULT_LOGIC.md  CSA_PLATEAU_INTEGRATION.md  DECISION_PACK_P1_2026.md  DEPENDENCIES.md  DEPLOYMENT.md  DEVICE_COMMISSIONING_CHECKLIST_2026.md  DEVICE_CONNECTIVITY_INVENTORY_2026.md  DEVICE_EQUIPMENT_REGISTRY_DECISION_2026.md  DEVICE_INTEGRATION_MATRIX_2026.md  DEVICE_MANUALS_REQUIRED_2026.md  DHIS2_AGGREGATE_GATEWAY.md  EQUIPMENT_QUALIFICATION_WORKFLOW_2026.md  EQUIPMENT_REGISTRY_ARCHITECTURE_2026.md  EQUIPMENT_REGISTRY_DATA_DICTIONARY_2026.md  EQUIPMENT_REGISTRY_MIGRATION_PLAN_2026.md  GO_NO_GO_COMMITTEE_PACK_2026.md  GO_NO_GO_RUGGYLAB_2026.md  INCIDENT_WORKER_PLANIFIE_2026-07-23.md  INTERPRETATION.md  LIVRABLES_FORMATION_EXPLOITATION.md  OPERATIONAL_ACCEPTANCE_CHECKLIST_2026.md  PR80_MAIN_INTEGRATION_REVIEW_2026.md  PREPRODUCTION_QUALIFICATION_PLAN_2026.md  PRESENTATION_INSTITUTIONNELLE.md  PROCEDURE_CORRECTION_AMENDEMENT.md  PROCEDURE_FONCTIONNEMENT_DEGRADE.md  PROCEDURE_GESTION_REACTIFS.md  PROCEDURE_PRELEVEMENT_RESULTAT.md  PROCEDURE_VALEURS_CRITIQUES.md  PRODUCTION_SECURITY_CHECKLIST.md  QUALIFICATION_SERVEUR.md  ROLLBACK_AND_RECOVERY_RUNBOOK_2026.md  RUGGYLAB_NEXT_STEPS.md  SECRETS_MANAGEMENT.md  TRAINING.md  (+6 more)
ml/: dataset.py  trainer.py  (+2 more)
(+427 files in other folders)
